name:                stackage-user-status
version:             0.1.0.0
synopsis:            Figure out which packages you should update based on build-constraints.yaml
description:         Figure out which packages you should update based on build-constraints.yaml
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2016 Adam Bergmark
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stackage-user-status
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
      base >= 4.8 && < 4.9
    , Cabal
    , classy-prelude
    , containers
    , http-client
    , http-client-tls
    , pretty
    , stackage-curator
    , string-conversions
    , unordered-containers
